syntax = "proto3";
import "google/protobuf/empty.proto";
package blog;

option go_package = "./blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1; // will have a blog_id
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  string blog_id = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
  rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);
  rpc DeleteBlog (DeleteBlogRequest) returns (google.protobuf.Empty);
}



